-------------------------------------------------------------------------------

2008.01.11 (Julien Ponge):

    - Constraint helpers: disjunction-free test and disjunction computation.

2008.01.07 (Julien Ponge):

    - Temporal constraints: support for deep copy.

2007.12.30 (Julien Ponge):

    - Java 5 migration (generics). Addresses #21.
    - Ant JUnit task.

2007.12.29 (Julien Ponge):

    - Relaxed M-Invoke constraints definition to reflect the new model.
      (it still requires the introduction of diagonal constraints)

-------------------------------------------------------------------------------

Release 0.4.0 (release-0.4.0) (2006.06.27)

2006.06.26 (Julien Ponge):

    - Ensure that M-Invoke constraints have a single ComparisonNode with "="
      as the symbol. Closes #16.
    - Temporal constraints lexer: elements have been paraphrased to provide
      comprehensive error reports.

2006.06.14 (Julien Ponge):

    - BusinessProtocolImpl: recompute the final states in getFinalStates().

2006.06.13 (Julien Ponge):

    - BusinessProtocolImpl: fixed a bug where messages were systematically
      removed from the protocol. This is now done only if no other operation
      carries the same message. Closes bug #18.

2006.06.09 (Julien Ponge):

    - First round of temporal constraints extensions, using AntLR to generate
      the constraints language parser.
    - Operations now need to have a name (ex: T1). The XML persistence has been
      adapted to automatically generate names to support legacy protocols.
      Also, OperationImpl will generate unique identifiers when calling the
      previous (now deprecated) constructors.

2006.03.29 (Julien Ponge):

    - Applied the CDDL License.

2005.11.27 (Julien Ponge):

    - OperationKind support (needed to describe interaction protocols).

2005.10.31 (Julien Ponge):

    - Don't give an extra properties handler when there is none for a requested
      class.

2005.08.22 (Julien Ponge):
